--- a/ansible/setup-containers.yml
+++ b/ansible/setup-containers.yml
@@ -2,6 +2,8 @@
 - name: Setup containers
   hosts: all
   become: yes
+  roles:
+    - cloudalchemy.node_exporter
 
   tasks:
   - name: Creating docker directory
